--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+doctype html
 html lang="ja"
   head
     meta charset="UTF-8"/
@@ -9,4 +9,6 @@ html lang="ja"
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
   body 
-    = yield 
+    = render "layouts/header"
+    main
+      = yield 
