--- a/app/views/public/posts/new.html.slim
+++ b/app/views/public/posts/new.html.slim
@@ -1,2 +1,12 @@
-h1 Public::Posts#new
-p Find me in app/views/public/posts/new.html.slim
+h1 新規投稿
+= form_with model: @post, url: posts_path, method: :post do |f|
+  .form-group 
+    = f.label :title 
+    <br>
+    = f.text_field :title
+  .form-group 
+    = f.label :body
+    <br>
+    = f.text_area :body
+  .action 
+    = f.submit '投稿'
