--- a/app/views/public/posts/show.html.slim
+++ b/app/views/public/posts/show.html.slim
@@ -1,2 +1,7 @@
-h1 Public::Posts#show
-p Find me in app/views/public/posts/show.html.slim
+h3 投稿詳細
+h4.post-title = @post.title
+div.post-body = simple_format(@post.body)
+- if @post.user == current_user 
+  = link_to "編集", edit_post_path(@post)
+  br
+  = link_to "削除", post_path(@post),  data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？"}
