--- a/app/views/public/posts/index.html.slim
+++ b/app/views/public/posts/index.html.slim
@@ -1,2 +1,6 @@
-h1 Public::Posts#index
-p Find me in app/views/public/posts/index.html.slim
+.container 
+  .row.mt-5 
+    .col-md-8.mx-auto 
+      h1 投稿一覧
+      - @posts.each do |post|
+        = link_to post.title, post_path(post)
