[add]bootstrapでのレイアウト

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,29 @@
  // Custom bootstrap variables must be set or imported *before* bootstrap.
 @import "bootstrap";
 
+a {
+  text-decoration: none;
+}
+
+header {
+  background-color: #848282;
+  font-family: "Impact", sans-serif;
+}
+
+header .heading {
+  font-size: 32px;
+  color: white;
+}
+
+header a {
+  color: white;
+}
+
+.navbar-nav li {
+  margin: 0 25px;
+  font-size:  20px
+}
+
+.navbar-toggler-icon {
+  background-color: #fff;
+}
