--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,7 +1,17 @@
 header
-  - if user_signed_in?
-    li = link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }
-    li = link_to "新規投稿", new_post_path 
-  - else
-    li = link_to "新規登録", new_user_registration_path 
-    li = link_to "ログイン", new_user_session_path 
+  h1.heading.text-center.pt-3 
+    a href="/top" 
+    | SPOMATCH 
+  nav.navbar.navbar-expand-lg.navbar-light 
+    .container 
+      button.navbar-toggler.bg-secondary type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupprtedContent" aria-expanded="false" aria-label="Toggle navigation"
+        span.navbar-toggler-icon 
+      .navbar.mx-auto 
+        .collapse.navbar-collapse
+          ul.navbar-nav.ms-auto 
+            - if user_signed_in?
+              li.nav-item = link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete }
+              li.nav-item = link_to "新規投稿", new_post_path 
+            - else
+              li.nav-item = link_to "新規登録", new_user_registration_path 
+              li.nav-item = link_to "ログイン", new_user_session_path 
