--- a/app/views/public/homes/top.html.slim
+++ b/app/views/public/homes/top.html.slim
@@ -1,6 +1,4 @@
-div 
-  h1 top 
-  ul 
-    li ruby 
-    li rails 
-    
+.container 
+  .row.mt-5 
+    .col-md-8.mx-auto 
+      h1.text-center TOPページです
